# stocks-analysis

./: .dockerignore  .gitignore  Dockerfile  PROJECT_LEARNING_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
config/: settings.yaml
docs/: README.md  agent.md  api-and-cli.md  core.md  data-modules.md  infra.md  market-data.md  reports.md
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
market_reporter/: __init__.py  __main__.py  api.py  cli.py  config.py  main.py  models.py  schemas.py  settings.py
market_reporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/: README.md
tests/: test_agent_capability_registry.py  test_agent_guardrails.py  test_agent_orchestrator_market_mode.py  test_agent_orchestrator_skill_tool.py  test_agent_orchestrator_skills.py  test_agent_orchestrator_stock_mode.py  test_agent_orchestrator_timeframes.py  test_agent_report_formatter.py  test_agent_runtime_action_json.py  test_agent_runtime_codex_langchain.py  test_agent_runtime_factory.py  test_agent_runtime_openai_tool.py  test_agent_skill_catalog.py  test_agent_tools_longbridge.py  test_analysis_provider_status.py  test_analysis_service_user_isolation.py  test_analyzer.py  test_compute_tools_backend_selection.py  test_compute_tools_momentum_volume_patterns.py  test_compute_tools_support_resistance.py  test_compute_tools_trend_signals.py  (+37 more)
(+209 files in other folders)
