[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-reporter"
version = "0.2.0"
description = "Finance & policy news + A/HK/US fund-flow analytics with FastAPI admin console."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "orjson>=3.10.7",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.2",
  "cryptography>=43.0.0",
  "keyring>=25.3.0",
  "openai>=1.43.0",
  "akshare>=1.15.70",
  "yfinance>=0.2.44",
  "tenacity>=8.5.0",
  "apscheduler>=3.10.4",
]

[project.scripts]
market-reporter = "market_reporter.cli:main"

[tool.setuptools.packages.find]
include = ["market_reporter*"]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
]
